ipc/ipdl/test/ipdl/error/cyclecheck_Child.ipdl
include protocol "cyclecheck_Parent.ipdl";
include protocol "cyclecheck_Grandchild.ipdl";

protocol cyclecheck_Child {
    manager cyclecheck_Parent;
    manages cyclecheck_Grandchild;

child:
    cyclecheck_Grandchild();
    __delete__();
};

